# tsx

./: .dockerignore  .gitignore  .vercelignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INSTALL.md  LICENSE  README.md  REPORT.md  USAGE.md  api.todo.md  apps.todo.md  bugs.todo.md  fly.toml  live.plan.md  plan.md  prod.md  proposal.agent-cli.md  proposal.framework-protocol.md  proposal.md  proposal.new.md  protocol.todo.md  render.yaml  todo.md  tsx.cli.report.md
.github/workflows/: ci.yml  release.yml
apps/docs/: package.json  vercel.json  vite.config.ts
apps/registry-web/: package.json  vercel.json
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs  metadata.json  output.rs
crates/cli/src/commands/: add_feature.rs  add_page.rs  add_query.rs  add_schema.rs  add_table.rs  batch.rs  inspect.rs  mod.rs  package.rs  where_cmd.rs
crates/cli/src/commands/generate/: add_feature.rs  add_form.rs  add_page.rs  add_query.rs  add_schema.rs  add_seed.rs  add_server_fn.rs  add_table.rs  mod.rs
crates/cli/src/commands/manage/: add_auth.rs  add_auth_guard.rs  add_migration.rs  auth.rs  completions.rs  dev.rs  doctor.rs  init.rs  mod.rs  self_update.rs  upgrade.rs
crates/cli/src/commands/ops/: adb.rs  analyze.rs  atoms.rs  audit.rs  batch.rs  build.rs  codegen.rs  config.rs  context.rs  env.rs  flutter.rs  generate.rs  lint_template.rs  mcp.rs  migrate.rs  mod.rs  path.rs  pattern.rs  pkg.rs  port.rs  registry.rs  repl.rs  replay.rs  run.rs  snapshot.rs  stack.rs  subscribe.rs  template.rs  test_run.rs
crates/cli/src/commands/query/: describe.rs  explain.rs  how.rs
crates/cli/src/framework/: command_registry.rs  detect.rs  knowledge.rs  loader.rs  package_cache.rs
crates/cli/src/json/: error.rs  mod.rs  payload.rs  response.rs
crates/cli/src/plugin/: validator.rs
crates/cli/src/render/: embedded.rs  engine.rs  pipeline.rs
crates/cli/src/schemas/: auth.rs  field.rs  mod.rs  query.rs  schema.rs  seed.rs  server_fn.rs
crates/cli/src/stack/: mod.rs
crates/cli/src/utils/: paths.rs  write.rs
crates/cli/tests/: e2e.rs
crates/codegen/: Cargo.toml
crates/docs/: Cargo.toml
crates/docs/src/: lib.rs  markdown.rs  reader.rs  topic.rs
crates/fmt/: Cargo.toml
crates/forge/: Cargo.toml
crates/forge/benches/: render_bench.rs
crates/forge/src/: ast.rs  cache.rs  collector.rs  compose.rs  config.rs  context.rs  engine.rs  error.rs  filters.rs  lib.rs  lint.rs  manifest.rs  metadata.rs  pack.rs  pack_runner.rs  plan.rs  preprocessor.rs  provide.rs  registry.rs  slots.rs  tier.rs  validate.rs  watch.rs
crates/forge/tests/: snapshot.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: completions.rs  diagnostics.rs  hover.rs  lib.rs  server.rs  transport.rs
crates/registry-server/: .dockerignore  .env.example  Cargo.toml  Dockerfile  Secrets.toml  docker-compose.yml
crates/registry-server/.sqlx/: query-097ccb277fb42d249907723ba49ac7a8464c44c01d5f6f651689777b7c5b1394.json  query-0e214ca99083d1410b912a25f8166a6526abed9b0223a384b49bf9c8d636ec84.json  query-35573e1ebef1d7a0a7f5c7c35af92e55877a4706d665290fd3beace011fd2f33.json  query-4cafcffa221812471cd379baec29d365fc11538ac8dcc68b094caa3a2164bbb9.json  query-6697acd3e08b7b033de872280a2927c09e0ae9757b9be58d5bbe974853605706.json  query-67c23a571539ddebac0235fea82bf19418b5f8f3e7ea0694671f9c1db12be6b3.json  query-720a62384b3aa3eac38d58e4fed769b5cf34b3be1a9206252b53c31ec1323682.json  query-7c96b35d7619ab09dfc180fb34d74a71c5ba87912b38b51823e8f1978560b85d.json  query-8a1e71d9f32f12e18eabb67e95669e253024e08b842ee4595e9456c7dbac47d8.json  query-9253829a301379ff213b6be0f54b97012120697e327d032105483c6f2c51f2b5.json  query-9b592bfda23867de936dc5f5bfead2ca16d77e70fe116b4b64894ba347ca62b8.json  query-9c2cbcc290cb03654574493193f2c2951d797455853a6c24a807d6f819009d0a.json  query-a28c1f345c95e1d1d58b57da074b7234de25a019e7b34158f45fbff5049ab933.json  query-b328a91da67f5138a0f5fb41a820f5e15d3a2a95a12cde8788663b90d0c6961c.json  query-ca0dd54fc0490ed642da8c42e3e8ac4fc9db43dca8c4dffbdc0e0fd9b23f5865.json  query-e71131df608e4e01701092da2894565cbe6e5cc3b8e684ca73101e25dad2c84e.json  query-e75e69183e91a7aeaac782f2cb4f05c068375246cc9e5e368adf10108901ac29.json  query-f311ecfb53c7bebac065fc3f24b971fab67dfd2cccc6cf7cae471315d33cf8a0.json  query-f48ba8f7b20d25a153111005ddf81a2847169d1013e8e46f66735359de52f66f.json  query-f9ce129677d2c20e6c9cb0f793fbeb0db9e4200a0c344de37b47df3f014a8d3f.json  query-fa037ee787acc28bd12321e71291c8b95333de79d186c5eb3e74721fe70d45fd.json  query-fd577c5523cdbd6fc079f3e9f3db0d2ac51641e3f48d6cb5d60434cdd96eac0d.json
crates/registry-server/src/: db.rs  main.rs  models.rs
crates/registry-server/src/db/: audit.rs  auth.rs  downloads.rs  mod.rs  packages.rs  patterns.rs  rate_limit.rs  stars.rs  stats.rs  webhooks.rs
crates/registry-server/src/routes/: admin.rs  auth_route.rs  commands.rs  discovery.rs  feed.rs  health.rs  mod.rs  packages.rs  patterns.rs  search.rs  stars.rs  stats.rs  users.rs  webhook_fire.rs  webhooks.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/tui/: Cargo.toml
crates/watcher/: Cargo.toml
crates/watcher/src/: config.rs  debouncer.rs  event.rs  lib.rs
data/: explain.json
examples/: README.md
examples/basic-crud/: README.md
examples/full-saas/: README.md
examples/with-auth/: README.md
examples/with-shadcn/: README.md
frameworks/analytics/: registry.json
frameworks/authjs/: registry.json
frameworks/axum-sea-orm/: manifest.json
frameworks/better-auth/: manifest.json  registry.json
frameworks/clerk/: registry.json
frameworks/drizzle-mysql/: manifest.json
frameworks/drizzle-orm/: registry.json
frameworks/drizzle-pg/: manifest.json
frameworks/drizzle-sqlite/: manifest.json
frameworks/fastapi-sqlalchemy/: manifest.json
frameworks/gin-gorm/: manifest.json
migrations/: 0001_initial_schema.sql  0002_fts_and_rate_limits.sql  0003_webhooks.sql  0004_stars.sql  0005_deprecation.sql  0006_manifest_jsonb.sql  0007_patterns.sql
scripts/: install.sh
src/: lib.rs  main.rs  output.rs
templates/: metadata.json
tests/: e2e.rs
(+298 files in other folders)
