[workspace]
members = [".", "crates/forge"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
heck = "0.5"
tera = "1"
walkdir = "2"

[package]
name = "tsx"
version = "0.1.0"
edition = "2021"

[dependencies]
forge = { path = "crates/forge" }
clap = { version = "4", features = ["derive"] }
minijinja = { version = "2", features = ["loader"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
walkdir = { workspace = true }
heck = { workspace = true }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
notify = "6"
tungstenite = "0.24"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
