[workspace]
members = [
    "crates/cli",
    "crates/docs",
    "crates/fmt",
    "crates/forge",
    "crates/registry-server",
    "crates/shared",
    "crates/tui",
    "crates/watcher",
]
resolver = "2"

[workspace.dependencies]
serde      = { version = "1",   features = ["derive"] }
serde_json = "1"
anyhow     = "1"
heck       = "0.5"
tera       = "1"
walkdir    = "2"
criterion  = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level      = 3
lto            = true
codegen-units  = 1
strip          = true
