[package]
name = "tsx"
version = "0.1.0"
edition = "2021"
description = "Universal Framework Protocol CLI — agent-native code generation for TanStack Start and beyond"
license = "MIT"
repository = "https://github.com/ateeq1999/tsx"
keywords = ["codegen", "tanstack", "cli", "framework", "typescript"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["target/", ".tsx/"]

[[bin]]
name = "tsx"
path = "src/main.rs"

[dependencies]
forge      = { package = "tsx-forge",   path = "../forge",   version = "0.1.0" }
tsx-shared = { package = "tsx-shared",  path = "../shared",  version = "0.1.0" }
clap = { version = "4", features = ["derive"] }
minijinja = { version = "2", features = ["loader"] }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
walkdir    = { workspace = true }
heck       = { workspace = true }
reqwest = { version = "0.12", features = ["json", "blocking", "multipart"] }
tokio   = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
flate2  = "1"
tar     = "0.4"
semver  = "1"
notify  = "6"
tungstenite = "0.24"

[dev-dependencies]
tempfile = "3"
