[package]
name = "tsx-forge"
version = "0.1.0"
edition = "2021"
description = "4-tier code generation engine for the tsx Framework Protocol"
license = "MIT"
repository = "https://github.com/ateeq1999/tsx"
keywords = ["codegen", "template", "tera", "framework"]
categories = ["template-engine", "development-tools"]

[dependencies]
tera = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
heck = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
minijinja = "2"

[[bench]]
name = "render_bench"
harness = false
