[package]
name    = "tsx-lsp"
version = "0.1.0"
edition = "2021"
description = "Language Server for .tsx/ config files and .forge templates"
license = "MIT"
repository = "https://github.com/ateeq1999/tsx"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
lsp-types  = "0.97"
