[package]
name = "tsx-registry"
version = "0.1.0"
edition = "2021"
description = "registry.tsx.dev — hosted package registry backend for the tsx CLI"
license = "MIT"
repository = "https://github.com/ateeq1999/tsx"

[[bin]]
name = "tsx-registry"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
semver = "1"
time = { version = "0.3", features = ["serde"] }
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"
flate2 = "1"
tar = "0.4"
tempfile = "3"
