[package]
name = "tsx-registry"
version = "0.1.0"
edition = "2021"
description = "registry.tsx.dev — hosted package registry backend for the tsx CLI"
license = "MIT"
repository = "https://github.com/ateeq1999/tsx"

[[bin]]
name = "tsx-registry"
path = "src/main.rs"

[dependencies]
tsx-shared = { path = "../shared", version = "0.1.0" }

# ── Shuttle runtime (replaces standalone tokio::main + TcpListener) ───────────
shuttle-runtime = "0.57.0"
shuttle-axum    = "0.57.0"

# ── Web framework ─────────────────────────────────────────────────────────────
axum  = { version = "0.8", features = ["multipart"] }
# tokio still needed for tokio::fs, Mutex, etc.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }

# ── Serialisation ─────────────────────────────────────────────────────────────
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Error handling ────────────────────────────────────────────────────────────
anyhow = "1"

# ── Database (Neon PostgreSQL via SQLx) ───────────────────────────────────────
sqlx = { version = "0.8", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "chrono",
    "uuid",
    "json",
] }
chrono = { version = "0.4", features = ["serde"] }

# ── HTTP middleware ───────────────────────────────────────────────────────────
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# ── Observability ─────────────────────────────────────────────────────────────
# NOTE: tracing-subscriber is NOT initialised manually; Shuttle owns that.
tracing = "0.1"

# ── Utilities ─────────────────────────────────────────────────────────────────
uuid       = { version = "1", features = ["v4"] }
sha2       = "0.10"
hex        = "0.4"
semver     = "1"
tokio-util = { version = "0.7", features = ["io"] }
bytes      = "1"
flate2     = "1"
tar        = "0.4"
