[package]
name    = "tsx-watcher"
version = "0.1.0"
edition = "2021"
description = "File watcher and live regeneration for the tsx CLI"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
notify     = "6"
walkdir    = { workspace = true }

[dev-dependencies]
tempfile = "3"
